--- a/Fronted/html/login.html
+++ b/Fronted/html/login.html
@@ -43,6 +43,16 @@
         <label for="registerName">Name</label>
         <input type="text" id="registerName" placeholder="Enter your name" required />
         
+        <label for="registerLastName">Last Name</label>
+        <input type="text" id="registerLastName" placeholder="Enter your name" required />
+
+        <!-- Agregar formato para ingresar datos de fecha -->
+        <label for="registerBirth">Date of Birth</label>
+        <input type="text" id="registerBirth" placeholder="Enter your name" required />
+
+        <label for="registerPhoneNumber">Phone number</label>
+        <input type="text" id="registerPhoneNumber" placeholder="Enter your name" required />
+
         <label for="registerEmail">Email</label>
         <input type="email" id="registerEmail" placeholder="Enter your email" required />
         
@@ -58,6 +68,7 @@
             <a href="#" id="alreadyHaveAccount">Already have an account? Log in</a>
         </div>
     </form>
+
 
     <!-- Formulario de Recuperación de Contraseña -->
     <form id="forgotPasswordForm" class="login-card" style="display:none;">
