--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -8,25 +8,77 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="../js/header-footer.js"></script>
 </head>
 
 
 
 <body>
     <header>
-        <!--<nav>
-        <ul>
-            <li><a href="#nosotros">¿Quiénes somos?</a></li>
-            <li><a href="#carta">Carta</a></li>
-            <div class="logo-container">
-                <img src="../../imagenes/LingoBurguer logo.png" alt="Lingoburguer Logo" class="logo">
+        <div class="header-container">
+            <div class="main-header">
+                <!-- Botón de menú para móvil -->
+                <div class="mobile-menu-toggle" id="mobile-menu-toggle">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+                <!-- Menú desplegable estilo Telepizza (visible solo en desktop) -->
+                <div class="menu-dropdown">
+                    <div class="menu-icon">
+                        <i class="fas fa-bars"></i>
+                        <span>Menú</span>
+                    </div>
+                    <div class="dropdown-content">
+                        <a href="#about">About Us</a>
+                        <a href="#menu">Menu</a>
+                        <a href="#contact">Contact Us</a>
+                        <a href="#careers">Careers</a>
+                    </div>
+                </div>
+
+                <!-- Logo central -->
+                <div class="logo-container">
+                    <a href="index.html">
+                        <img src="../images/LogoLingoBurguerWhite.png" alt="LingoBurguer" class="header-logo">
+                    </a>
+                </div>
+
+                <!-- Iconos de acción -->
+                <div class="user-actions">
+                    <div class="action-icon">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <div class="action-icon">
+                        <i class="fas fa-shopping-cart"></i>
+                    </div>
+                    <div class="action-icon">
+                        <i class="fas fa-user"></i>
+                    </div>
+                </div>
             </div>
-            <li><a href="#nosotros"></a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>-->
+
+            <!-- Menú móvil desplegable -->
+            <div class="mobile-menu" id="mobile-menu">
+                <ul>
+                    <li class="mobile-menu-item"><a href="#about">About Us</a></li>
+                    <li class="mobile-menu-item"><a href="#menu">Menu</a></li>
+                    <li class="mobile-menu-item"><a href="#contact">Contact Us</a></li>
+                    <li class="mobile-menu-item"><a href="#careers">Careers</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- Desplegable de búsqueda -->
+        <div class="search-dropdown" id="search-dropdown">
+            <form class="search-form">
+                <input type="text" class="search-input" placeholder="What are you looking for?">
+                <button type="submit" class="search-button">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+        </div>
+        </div>
     </header>
-    
+
     <section class="hero" id="inicio">
         <div class="hero-video-container">
             <video autoplay muted loop>
