--- a/Fronted/html/login.html
+++ b/Fronted/html/login.html
@@ -16,7 +16,7 @@
         <span class="material-symbols-outlined">
             <a href="./index.html">arrow_back_ios</a>
         </span>
-        <h2>Welcome to Lingoburguer</h2>
+        <h2>Welcome to Lingoburguer2</h2>
 
         <label for="loginEmail">Email</label>
         <input type="email" id="loginEmail" placeholder="Enter your email" required />
