--- a/Fronted/html/userDetail.html
+++ b/Fronted/html/userDetail.html
@@ -20,16 +20,19 @@
             </div>
             
             <div class="user-profile">
-                <img src="/api/placeholder/100/100" alt="Foto de perfil" class="user-avatar">
+                <!--Recoger datos de la base de datos-->
+                <img src="" alt="Foto de perfil" class="user-avatar">
                 <div class="user-name">[Insertar Nombre de BD]</div>
                 <div class="user-email">[Insertar Correo de BD]</div>
             </div>
             
+
+            <!-- Menu de barra lateral -->
             <div class="nav-menu">
                 <h3>Gestión de Cuenta</h3>
                 <ul>
                     <li><a href="#" class="active"><i class="fas fa-user"></i> Información Personal</a></li>
-                    <li><a href="#"><i class="fas fa-lock"></i> Seguridad</a></li>
+                    <li><a href="#"><i class="fas fa-lock"></i> Seguridad</a></li> <!--  -->
                     <li><a href="#"><i class="fas fa-bell"></i> Notificaciones</a></li>
                     <li><a href="#"><i class="fas fa-credit-card"></i> Pagos</a></li>
                 </ul>
