Demasiados Cambios para epxlicar, Conectividad js hecha

--- a/Fronted/html/index.html
+++ b/Fronted/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="../js/header-footer.js"></script>
+    
 </head>
 
 
@@ -30,8 +30,8 @@
                         <div class="close-sidebar gradient-text" id="close-sidebar">✖</div>
                     </div>
                     <ul>
-                        <li><a href="#" class="gradient-text">Menu</a></li>
-                        <li><a href="#" class="gradient-text">About Us</a></li>
+                        <li><a href="./menu.html" class="gradient-text">Menu</a></li>
+                        <li><a href="./about-us.html" class="gradient-text">About Us</a></li>
                         <li><a href="#" class="gradient-text">Contact</a></li>
                         <li><a href="#" class="gradient-text">Careers</a></li>
                     </ul>
@@ -214,36 +214,11 @@
     </section>
 
     <footer>
-        <div class="footer-content">
+         <div class="footer-content">
             <img src="../images/LogoLingoBurguerWhite.png" alt="Lingoburguer Logo" class="footer-logo">
         </div>
+
         <span class="footer-locations">
-            <div class="footer-locations-pack">
-                <div class="footer-name-location">
-                    <h3>Lingo Burguer Silicon Valley</h3>
-                    <p>123 Silicon Valley Blvd, San Jose, CA
-                        <br>408-555-1234
-                    </p>
-                </div>
-            </div>
-
-            <div class="footer-locations-pack">
-                <div class="footer-name-location">
-                    <h3>Lingo Burguer Los Angeles</h3>
-                    <p>456 Innovation St, Los Angeles, CA
-                        <br>323-555-5678
-                    </p>
-                </div>
-            </div>
-
-            <div class="footer-locations-pack">
-                <div class="footer-name-location">
-                    <h3>Lingo Burguer San Francisco</h3>
-                    <p>789 Golden Gate Ave, San Francisco, CA
-                        <br>415-555-7890
-                    </p>
-                </div>
-            </div>
         </span>
 
         <div class="footer-socialmedia">
@@ -283,10 +258,10 @@
             </button>
         </div>
 
-        <div class="footer-links">
+         <div class="footer-links">
             <span>
                 <a href="../html/about-us.html"><b>About us</b></a>
-                <a href="../html/contact.html"><b>Contact us</b></a>
+                <a href="../html/contact-us.html"><b>Contact us</b></a>
                 <a href="../html/careers.html"><b>Careers</b></a>
             </span>
         </div>
@@ -307,6 +282,7 @@
     </footer>
 
     <script src="../js/script.js"></script>
+    <script src="../js/header-footer.js"></script>
 </body>
 
 </html>
