--- a/Fronted/html/login.html
+++ b/Fronted/html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lingoburguer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/login_styles.css">
+    <link rel="stylesheet" href="../css/login-styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_back_ios" />
 </head>
 
@@ -17,7 +17,7 @@
         <span class="material-symbols-outlined">
             <a href="./index.html">arrow_back_ios</a>
         </span>
-        <h2>Welcome to Lingoburguer2</h2>
+        <h2>Welcome to Lingoburguer</h2>
 
         <label for="loginEmail">Email</label>
         <input type="email" id="loginEmail" placeholder="Enter your email" required />
@@ -89,7 +89,7 @@
         </div>
     </form>
 
-    <script src="../js/login_script.js"></script>
+    <script src="../js/loginScript.js"></script>
 </body>
 
 </html>
