terminadas algunas cosillas

--- a/Fronted/html/contact-us.html
+++ b/Fronted/html/contact-us.html
@@ -66,18 +66,16 @@
                 Visit our locations
             </h2>
             <p>
-                Come visit us and enjoy the best burgers in town!
+                Come visit us and enjoy the best burgers in town!</p>
             <ul>
                 <li>789 Golden Gate Ave, San Francisco, CA.</li>
                 <li>123 Silicon Valley Blvd, San Jose, CA</li>
                 <li>456 Innovation St, Los Angeles, CA</li>
             </ul>
-            </p>
             <h2>
                 Email
             </h2>
-            <p>For inquiries related to privacy, orders, or collaboration requests, drop us an email. <b>lingoburguer@gmail.com</b>.
-            </p>
+            <p>For inquiries related to privacy, orders, or collaboration requests, drop us an email. <b>lingoburguer@gmail.com</b>.</p>
             <h2>
                 Business Hours
             </h2>
