--- a/Fronted/html/cookie-policy.html
+++ b/Fronted/html/cookie-policy.html
@@ -76,7 +76,7 @@
                 Types of Cookies We Use
             </h2>
             <p>
-                At LingoBurguer, we use various types of cookies, including:
+                At LingoBurguer, we use various types of cookies, including:</p>
             <ul>
                 <li><b>Essential Cookies: </b> Necessary for the basic functioning of the website and cannot be
                     disabled. They enable features such as user authentication and session management.</li>
@@ -87,7 +87,7 @@
                 <li><b>Advertising and Third-Party Cookies:</b> Used to display personalized ads and analyze the
                     effectiveness of promotional campaigns. These cookies may be managed by external providers.</li>
             </ul>
-            </p>
+            
             <h2>
                 How We Use Cookies
             </h2>
