--- a/Fronted/html/legal-notice.html
+++ b/Fronted/html/legal-notice.html
@@ -69,57 +69,66 @@
             <h2>
                 Company Identification
             </h2>
-            <p><ul>
+            <ul>
                 <li><b>Company Name: </b> LingoBurguer S.L.</li>
                 <li><b>CIF/NIF: </b> B12345678</li>
                 <li><b>Email: </b> lingoburguer@gmail.com</li>
                 <li><b>Registered Address:</b> 789 Golden Gate Ave, San Francisco, CA</li>
                 <li><b>Business Activity:</b> Themed and educational food sales for delivery and pickup</li>
             </ul>
-            </p>
+
             <h2>
                 Concerned About Your Personal Data?
             </h2>
-            <p>Please read our <a href="../html/privacy-policy.html">Privacy Policy</a> to understand how we protect and manage your personal information.
+            <p>Please read our <a href="../html/privacy-policy.html">Privacy Policy</a> to understand how we protect and
+                manage your personal information.
             </p>
             <h2>
                 User Commitments and Obligations
             </h2>
-            <p>Users are informed and agree that accessing this website does not imply the beginning of any commercial relationship with LingoBurguer S.L.
-                Users agree to use this website, its services, and content in accordance with applicable laws, good faith, and public order.
-                It is strictly prohibited to use the website for illegal or harmful purposes, or for actions that may block or disrupt the proper functioning of the site. Specifically, users must not:
-                <ul>
+            <p> Users are informed and agree that accessing this website does not imply the beginning of any commercial
+                relationship with LingoBurguer S.L.
+                Users agree to use this website, its services, and content in accordance with applicable laws, good
+                faith, and public order.
+                It is strictly prohibited to use the website for illegal or harmful purposes, or for actions that may
+                block or disrupt the proper functioning of the site. Specifically, users must not:
+            </p>
+            <ul>
                 <li>Copy, distribute, or modify the content without the express authorization of LingoBurguer</li>
                 <li>Violate the rights of the website owner</li>
                 <li>Use the site or its content for commercial or advertising purposes without permission</li>
-                </ul>
-                <p>
-                Users agree not to engage in any behavior that could harm the image, interests, or rights of LingoBurguer S.L. or third parties, or that could damage, disable, or overload the website.
-                </p>
+            </ul>
+            <p>
+                Users agree not to engage in any behavior that could harm the image, interests, or rights of
+                LingoBurguer S.L. or third parties, or that could damage, disable, or overload the website.
             </p>
             <h2>
                 Security
             </h2>
-            <p>LingoBurguer informs users that it applies all necessary technical and organizational security measures to protect their personal data. The website uses HTTPS protocols for encrypted and secure communication.
-                However, users should understand that internet security is not absolute. While we make every reasonable effort to prevent it, LingoBurguer cannot fully guarantee the absence of malware or other harmful elements.
+            <p>LingoBurguer informs users that it applies all necessary technical and organizational security measures
+                to protect their personal data. The website uses HTTPS protocols for encrypted and secure communication.
+                However, users should understand that internet security is not absolute. While we make every reasonable
+                effort to prevent it, LingoBurguer cannot fully guarantee the absence of malware or other harmful
+                elements.
             </p>
             <h2>
                 Disclaimer of Warranties and Liability
             </h2>
-            <p>
-                <ul>
+            <ul>
                 <li>The unavailability or lack of maintenance of the website and its services</li>
                 <li>The presence of viruses or harmful software in the content</li>
                 <li>Illegal, negligent, or fraudulent use of the website</li>
                 <li>The lack of quality or legality of services provided by third parties</li>
                 <li>Any improper or unlawful use of the website by users</li>
-                </ul>
-            </p>
+            </ul>
+
             <h2>
                 Applicable Law and Jurisdiction
             </h2>
-            <p>In general, the relationship between LingoBurguer S.L. and users of its online services is governed by Spanish law, and any disputes will be subject to the courts of Madrid, Spain.
-                If you have any questions about this legal notice or anything related to www.lingoburguer.com, please contact us at: lingoburguer@gmail.com</p>
+            <p>In general, the relationship between LingoBurguer S.L. and users of its online services is governed by
+                Spanish law, and any disputes will be subject to the courts of Madrid, Spain.
+                If you have any questions about this legal notice or anything related to www.lingoburguer.com, please
+                contact us at: lingoburguer@gmail.com</p>
         </div>
     </main>
 
@@ -167,7 +176,7 @@
             </button>
         </div>
 
-         <div class="footer-links">
+        <div class="footer-links">
             <span>
                 <a href="../html/about-us.html"><b>About us</b></a>
                 <a href="../html/contact-us.html"><b>Contact us</b></a>
