--- a/Fronted/html/privacy-policy.html
+++ b/Fronted/html/privacy-policy.html
@@ -73,7 +73,7 @@
             </h2>
             <p>
                 Throughout your interaction with LingoBurguer, we may collect various types of personal information,
-                including:
+                including:</p>
             <ul>
                 <li><b>Personal data: </b> Name, last name, email address, and phone number.</li>
                 <li><b>Payment information:</b> Billing details and transaction records.</li>
