--- a/Fronted/html/terms-and-conditions.html
+++ b/Fronted/html/terms-and-conditions.html
@@ -76,23 +76,23 @@
                 Use of Our Services
             </h2>
             <p>
-                By using our website or placing an order, you agree that:
-                <ul>
+                By using our website or placing an order, you agree that:</p>
+            <ul>
                 <li>You are at least 18 years old or have parental consent if younger.</li>
                 <li>You will provide accurate personal and payment information.</li>
                 <li>You will not misuse or disrupt our services, including fraudulent activities, unauthorized access,
                     or violating local regulations.</li>
-                </ul>
-                <p>
+            </ul>
+            <p>
                 We reserve the right to refuse service to anyone who violates these terms or engages in harmful behavior
                 toward our business, employees, or other customers.
             </p>
-            </p>
+        
             <h2>
                 Ordering and Payments
             </h2>
             <p>Orders placed through our platform, whether online or in-store, are subject to availability. We strive to
-                ensure that prices, descriptions, and availability are accurate, but errors may occur.
+                ensure that prices, descriptions, and availability are accurate, but errors may occur.</p>
             <ul>
                 <li><b>Payments: </b> We accept various payment methods. All transactions are securely processed, and we
                     do not store sensitive payment details.</li>
@@ -100,7 +100,7 @@
                     including incorrect orders or quality concerns. If you experience an issue, please contact us
                     promptly.</li>
             </ul>
-            </p>
+            
             <h2>
                 Intellectual Property
             </h2>
@@ -129,7 +129,8 @@
             <h2>
                 Governing Law
             </h2>
-            <p>These terms are governed by California state laws, and any disputes will be handled in accordance with local legal procedures.
+            <p>These terms are governed by California state laws, and any disputes will be handled in accordance with
+                local legal procedures.
             </p>
         </div>
     </main>
@@ -178,7 +179,7 @@
             </button>
         </div>
 
-         <div class="footer-links">
+        <div class="footer-links">
             <span>
                 <a href="../html/about-us.html"><b>About us</b></a>
                 <a href="../html/contact-us.html"><b>Contact us</b></a>
